增加阿里云配置, 增加多安全组配置

--- a/config/server.ini
+++ b/config/server.ini
@@ -8,21 +8,37 @@ port =
 ; 私钥地址, 默认 config/security/private.pem
 key =
 
-[secret]
+[secret_tencent_lighthouse_1]
+; 腾讯云轻量服务器固定值
+type      = TencentLighthouse
+; 云服务器 访问域名
+endpoint  = lighthouse.tencentcloudapi.com
+; 云服务器 安全组所属地域ID
+region    = ap-guangzhou
 ; 云服务器 InstanceId
-instance = 
+instance  =
 ; 云服务器 SecretId
-id =
+secretId  =
 ; 云服务器 SecretKey
-key =
+secretKey =
+
+[secret_aliyun_ecs_1]
+; 阿里云ECS服务器固定值
+type            = AliyunEcs
+; 云服务器 访问域名
+endpoint        = ecs.cn-shenzhen.aliyuncs.com
+; 云服务器 安全组所属地域ID
+regionId        = cn-shenzhen
+; 云服务器 安全组ID
+securityGroupId =
+; 云服务器 AccessKeyId
+accessKeyId     =
+; 云服务器 AccessKeySecret
+accessKeySecret =
 
 [tcp]
 ; 超时配置(秒), 默认 180
 timeout = 30
-
-[udp]
-; 心跳配置(秒), 默认 180
-interval =
 
 [log]
 ; 日志级别: [off, error, warn, info, debug, trace], 默认 info
